translated hiv precense screens to kg

--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -1046,7 +1046,97 @@
   "c8_7text1":"Балага ВИЧ-статусун угузуу",
   "c8_7text2":"\n\nБалдарга ВИЧ-статусу тууралуу өтө эрте айтуунун кажети жок, себеби балдар бул тууралуу башкаларга айтып коюшу мүмкүн, бул балдар үчүн да, ВИЧ менен жашаган үй-бүлөлөр үчүн да жагымсыз кесепеттерге алып келиши мүмкүн. Бирок ден соолугуна туура мамиле жасашы керектиги жөнүндө кичине кезинен эле айта баштаса болот.",
   "c8_7text3":"\n\nБалага статусун 10-12 жашта угузуу сунушталат. Өспүрүмдөргө ВИЧ-статусту ата-эне өзү угузганы туура болот. Эгерде балаңыз менен башынан эле байланышты бекем түптөй алсаңыз, анда балаңызга ВИЧ-инфекциясы, аны жуктуруп алган себептери, ошондой эле ВИЧ менен жашоо жөнүндө айтып бере аласыз.",
-  "c8_7text4":"\n\nБалага ВИЧ-статусун угузууга СПИД борборлорунун дарыгерлери, психологдор, кээ бир окуудан өткөн педагогдор, бейөкмөт уюмдардын өкүлдөрү жардам беришет. Статусун уккандан кийин бала аны кабыл алып, дарылоону үзгүлтүккө учуратпашы үчүн ага психологиялык колдоо керек болот. Бул маселелерде ВИЧ менен жашаган жаш лидерлер да жардамчы болуп бере алышат."
+  "c8_7text4":"\n\nБалага ВИЧ-статусун угузууга СПИД борборлорунун дарыгерлери, психологдор, кээ бир окуудан өткөн педагогдор, бейөкмөт уюмдардын өкүлдөрү жардам беришет. Статусун уккандан кийин бала аны кабыл алып, дарылоону үзгүлтүккө учуратпашы үчүн ага психологиялык колдоо керек болот. Бул маселелерде ВИЧ менен жашаган жаш лидерлер да жардамчы болуп бере алышат.",
+
+
+  "presence_of_hiv_1text1": "Эгерде сизге ВИЧке чалдыкканыңызды айтышса, эмне кылуу керек?\n\n",
+  "presence_of_hiv_1text2": "Бүгүнкү күндө ВИЧ-инфекциясы өнөкөт жугуштуу оору болуп саналат, адам дарылана баштаса жана аны үзгүлтүккө учуратпаса, ден соолугун сактай алат жана ВИЧке чалдыкпаган адамдай эле узак өмүр сүрөт.",
+  "presence_of_hiv_1text3": "Өзүңүздү колго алып, сабырдуу болуп, ушул тиркемедеги “Бейтаптын мектеби” бөлүмүндө сакталган ВИЧ-инфекциясы жөнүндө маалыматтар менен таанышып чыгыңыз. Ушул эле маалыматтарды дарыгерден же бейөкмөт уюмдардын кызматкерлеринен да алсаңыз болот.",
+  "presence_of_hiv_1text4": "Дарыгер сизге бейөкмөт уюмдардын же ВИЧке чалдыккандарды колдоо топторунун даректерин бере алат. Алар сизге ВИЧ тууралуу маалымат берип, статусту кабыл алуу жана дарылоону баштоо этаптарында колдоо көрсөтүшөт.",
+  "presence_of_hiv_1text5": "Жыныстык өнөктөштөрүңүзгө статусуңузду ачып айтып, аларга ВИЧ-инфекциясын жуктурбоо үчүн чараларды көрүшүңүз керек.",
+  "presence_of_hiv_1text6": "Маалымат менен бөлүшүп, колдоо табуу үчүн ишенген адамдарды аныктап алышыңыз керек.",
+  "presence_of_hiv_1text7": "Сиз ВИЧ-инфекциясынын кандайдыр бир белгилерин байкабашыңыз мүмкүн, бирок ВИЧ организмде жүрөт жана иммундук (коргонуу) системанын клеткаларын акырындык менен талкалап жатканын унутпаңыз. Ошондуктан мүмкүн болушунча тезирээк ВИЧтен коргоно башташыңыз керек.",
+  "presence_of_hiv_1text8": "СПИД борборуна же башка медициналык уюмга (ҮМБ, ҮДТ) каттоого туруңуз; зарыл болгон текшерүүдөн өтүп, ВИЧ-инфекциясынан дарылана баштаңыз. Дарылоону канчалык эртерээк баштасаңыз, ВИЧ ден соолугуңузга ошончолук азыраак зыян келтирет.",
+  "presence_of_hiv_1text9": "Дарыланууну эрте мөөнөттө жана туура баштаганда (дарынын дозасын так сактаганда, дарыланууну үзгүлтүккө учуратпаганда) ВИЧ-позитивдүү адамдардын иммундук системасы бузулбайт, ошондуктан СПИД баскычына да өтүп кетпейт, оппортунисттик инфекциялар кошулбайт.",
+  "presence_of_hiv_1text10": "Өзүңүздү жана жакындарыңызды коргоо үчүн кандай профилактикалык чараларды көрүш керектиги жөнүндө маалымат алыңыз.",
+  "presence_of_hiv_1text11": "Зарыл болгон учурда, алдын алуу программаларына кошула аласыз. Бул программалар сизди жыныстык жол менен, же ийне аркылуу жуккан илдеттерден коргойт. Эгерде сиз баңгизатын колдонсоңуз, кокустан жыныстык катнашка барсаңыз, же өз жынысыңыздагы адамдар менен жыныстык байланыш түзсөңүз бул программалар өзгөчө маанилүү болот. ",
+
+  "presence_of_hiv_2text1":"Антиретровирустук дарылар",
+  "presence_of_hiv_2text2":"Антиретровирустук дарылар (АРВД)",
+  "presence_of_hiv_2text3":" – бул ретровируска, башкача айтканда ВИЧ-инфекциясын козгогон вируска каршы иштеген дарылар.\n",
+  "presence_of_hiv_2text4":"\nАзыркы учурда ВИЧ-инфекциясын дарылоо үчүн көптөгөн эффективдүү дарылар бар. Вирустун өнүгүүсүнүн түрдүү баскычында ар башкача таасирин тийгизген бир нече дарыны бир маалда ичип туруу маанилүү. Азыркы учурда бир таблеткада түрдүү үч дарыны камтыган дармектер чыгып жатат.\n",
+  "presence_of_hiv_2text5":"\nАзырынча, адамды ВИЧ-инфекциясынан толугу менен айыктыра алган дары жок жана вирустан коргой турган вакцина ойлонуп табыла элек. Ошондуктан ВИЧке чалдыккан адам өмүрүн аягына чейин үзгүлтүксүз дарыланып турушу керек.\n",
+  "presence_of_hiv_2text6":"\nАнтиретровирустук дарылар кантип иштейт?",
+  "presence_of_hiv_2text7":"\n\nАнтиретровирустук дарылар ВИЧ-инфекциясынан айыктыра албайт, болгону вирустун көбөйүшүн токтотот. АРТны ичкендин натыйжасында организмдеги ВИЧтин курамы миңдеген жана  миллиондогон эсе азайып, вирус иммундук клетканы талкалабай калат. Ошол учурдан тарта иммундук система калыбына келе баштайт.\n",
+  "presence_of_hiv_2text8":"\nУчурда дүйнө жүзү боюнча 20дан ашык антиретровирустук дары колдонулуп келатат. Ар бир дары вирустун көбөйүү баскычтарынын ар бирине таасир этет. Ошондуктан, дарыгерлер бир нече дарыны камтыган  дарылоо схемасын тандап беришет. АРВ дарылары бири-бирин толуктап, организмдин ВИЧтен коргонуусун камсыздап турушат.\n",
+  "presence_of_hiv_2text9":"АРТ схемасы үч түрдүү АРВ дарыларын камтыйт.",
+  "presence_of_hiv_2text10":"Дарылоо схемасын адамдын ден соолугунун өзгөчөлүктөрүн жана лабораториялык изилдөөнүн жыйынтыгын эске алуу менен дарыгер гана аныктайт.",
+  "presence_of_hiv_2text11":"Бир таблеткада 1, 2 же 3 дары болушу мүмкүн.",
+  "presence_of_hiv_2text12":"Күнүнө бирден үчкө чейин (кээде алтыга чейин) дары ичүүгө туура келет. Бул иммунитеттин абалына жана вирустун дарыларга туруктуулугуна жараша болот.",
+  "presence_of_hiv_2text13":"Дарылоону көзөмөлдөө үчүн вирустук жүктү билүү максатында канды үзгүлтүксүз тапшырып туруу керек, тагыраак айтканда, кандагы вирустун санын билүү өтө маанилүү.\n",
+  "presence_of_hiv_2text14":"\nАРТ качан иштебей калат (вирустук жүк качан азайбайт)?\n",
+  "presence_of_hiv_2text15":"Көбүнчө бул дарылануу схемасын көп жакшы сактабагандан улам, ВИЧ менен жашаган адам ар кандай себептерден улам дары ичпей калганда болот.",
+  "presence_of_hiv_2text16":"Кээде ВИЧ өзү ыңгайлашып, дарылардын таасирин кабыл албай калышы ыктымал (туруштук берип калат).",
+  "presence_of_hiv_2text17":"\nМындай учурларды дарыгер менен сүйлөшүп, маселени чогуу чечиш керек.",
+  "presence_of_hiv_2text18":"\n АРВ дарылары Саламаттык сактоо министрлиги бекиткен нускамаларга ылайык гана дайындалат (алар Клиникалык протоколдор деп аталат).\n",
+  "presence_of_hiv_2text19":"\nДүйнөдө ВИЧ-инфекциясын дарылоо үчүн жаңы, көбүрөөк эффективдүү дарыларды ойлоп табуунун үстүнөн иштер тынымсыз жүрүп жатат.\n",
+
+  "presence_of_hiv_3text1":"АРТнын адамдын ден соолугуна тийгизген таасири",
+  "presence_of_hiv_3text2":"ВИЧ адамдын организминде узак убакыт бою өзүн көрсөтпөй жүрө бергени менен, акырындап организмди оорулардан коргоп жаткан иммундук клеткаларды талкалай баштайт. АРТ дарыларын дайындоо иммундук системаны сактап, ошону менен организмди оорулардан коргоп калат.",
+  "presence_of_hiv_3text3":"Иммунитет бузулган учурда ВИЧ менен ооруган адамдын организми кошумча ооруларга чалдыгышы ыктымал – алар оппортунисттик оорулар деп аталат жана иммундук системасы күчтүү адамдарда пайда болбойт. Ушундай оорунун ар бири адам үчүн өтө олуттуу коркунуч жаратат (кээде адамдын өлүмүнө себепчи болот). Адатта ВИЧ-инфекциясына кургач учук да кошулат.",
+  "presence_of_hiv_3text4":"ВИЧке чалдыккан адам үчүн бул иммунитетти алсыздандыра турган кошумча коркунуч. Мындан тышкары, АРТ менен бирге башка дарыларды да ичүүгө туура келет, бул болсо дарылануунун жагымсыз кесепеттерин пайда кылат деген коркунучту жаратат. Башкача айтканда, күнүнө 2-3 дарынын ордуна кургак учуктун түрүнө жараша 8-10 дарыны ичүүгө туура келет. ВИЧ менен жашаган адамда ар кандай оорунун пайда болуу коркунучу жогору жана ВИЧке чалдыкпаган адамдарга караганда оор өтөт.",
+  "presence_of_hiv_3text5":"ВИЧ-позитивдүү кош бойлуу аялга АРТ дарыларын дайындоо менен курсактагы баласына ВИЧтин жугушун алдын алууга болот.",
+  "presence_of_hiv_3text6":"ВИЧке чалдыккан балдар жашоодогу болгон кубанычтарды көрүп, ооруну сезбей, курдаштары менен чогуу ойноп, күлүп, физикалык жактан жакшы өнүгүп, иммундук системасы күчтүү болушу үчүн АРТ дарыларын үзгүлтүксүз ичип турганы маанилүү.",
+  "presence_of_hiv_3text7":"Илим бир жерде турган жок. ВИЧ-инфекциясын дарылоо үчүн жаңы дарыларды ойлоп табуу багытында иштер тынымсыз жүрүп жатат. Балким, ВИЧтен айыктырган дарылар табылып, бул вирустан толугу менен кутулуп кетерсиз",
+  "presence_of_hiv_3text8":"Адам бул дүйнөгө жашоо үчүн келет. Бул үчүн адамдар оор операцияларды башынан өткөрүшөт, бутун, колун, төшүн ампутациялоого макул болушат, жүрөгүн жана бөйрөгүн алмаштыруу үчүн абдан көп акча төлөшөт, андан кийин да өмүрүнүн аягына чейин атайын дары-дармектерди ичип турушат; жакын адамына органын (бөйрөгүн) берген адамдар да аз эмес. Ошондуктан, күнүнө 1-3 дарыны ичип коюу узак жана дени сак өмүр үчүн арзыбаган акы..",
+
+  "presence_of_hiv_5text1":"АНТИРЕТРОВИРУСТУК ТЕРАПИЯНЫ КАРМАНУУ",
+  "presence_of_hiv_5text2":"АРТны кармануу – бул бейтаптар антиретровирустук дарыларды дарыгер жазып берген убакытта жана дозада ичип жатат дегенди билдирет. АРТ дарыларын өз убагында ичүү - дарылоонун ийгиликтүү болушунун эң маанилүү шарты.\n",
+  "presence_of_hiv_5text3":"ВИЧтин көбөйүшүн натыйжалуу түрдө токтотуу (б.а. вирустук жүктү аныкталбаган деңгээлге чейин түшүрүү) үчүн",
+  "presence_of_hiv_5text4":"дары-дармектердин белгиленген дозасын 95-100% ичүү керек.",
+  "presence_of_hiv_5text5":"\nАдамдар кээде көп жакшы көңүл бурбагандыктан, унутчаактыктан же дарылоонун натыйжасына ишенбегендиктен дарыларды ичкенде ката кетирип алышат. Ошондуктан, АРТ жөнүндө ишенимдүү маалымат жана колдоо алып туруу маанилүү.Сизге ВИЧ менен жашаган, өз статусу жөнүндө ачык айта алган адамдар чоң жардам бере алышат. ВИЧке чалдыккан адамдар кирген колдоо топторуна (өз ара жардам берген топторго) катыша аласыз. Алар ВИЧ-статусту кабыл алууга байланышкан стресстен арылуу жардам берет; ВИЧ-инфекциясын дарылоонун баштапкы баскычында колдоо көрсөтүшөт, дарыларды ичип туруш керектигин эскертип; башка да жардам көрсөтө алышат.\n",
+  "presence_of_hiv_5text6":"\nЭмне үчүн дарыларды өз убагында ичүү маанилүү?\n",
+  "presence_of_hiv_5text7":"Ар бир дары-дармекте канда белгилүү бир өлчөмдөгү дары дайыма сакталып тургандай доза белгиленген. Ушундай учурда гана ВИЧ көбөйбөйт жана антиретровирустук дарыларга туруштук бере тургандай болуп өзгөрбөй калат (мутациялабайт).",
+  "presence_of_hiv_5text8":"Дарыны өткөрүп жибергенде кандагы дарынын көлөмү азайып, ВИЧ көбөйө баштайт. Бул учурда мутант вирустар пайда болушу мүмкүн, алар антиретровирустук дарыларга туруштук бере алышат. Натыйжада белгиленген дарылоо схемасы иштебей калат. Бул дарылоо схемасын өзгөртүүгө алып келет, бул болсо кабыл алынган дарылардын санын көбөйтүү менен коштолот. ",
+  "presence_of_hiv_5text9":"Дарыларды ичүү режими канчалык көп үзгүлтүккө учураса, вирус ошончолук ыңгайлашып, антиретровирустук дарыларга туруштук бере алат.",
+  "presence_of_hiv_5text10":"Дары-дармектерди кабыл алуу үчүн белгиленген убакыттан бир саат четтөөгө болот, бирок дарыны белгиленген убакытта ичиш керек, бул үчүн сиз мобилдик телефонуңуздагы эскертмени колдоно аласыз. Дары ичүүнү күнүмдүк иштерге да байлап койсоңуз болот (эртең менен жуунуу, тамактануу учурунда,жумушка чыгып баратканда иче тургандай болуңуз) же такыр эле унутуп калып жатсаңыз, анда досторду же туугандарды жардамга чакырсаңыз болот.",
+  "presence_of_hiv_5text11":"Эгер сиз дары-дармектин кезектеги дозасын кабыл албай калсаңыз, анда аны төмөнкү учурларда гана ичүүгө болот: кийинки дозанын убактысына чейин 6 сааттан ашык убакыт бар болсо (күнүнө эки жолу кабыл алынган дарылар үчүн, мисалы, Комбивир) же 12 сааттан ашык убакыт болсо (күнүнө бир жолу кабыл алынган дарылар үчүн, мисалы, Атрипла).",
+  "presence_of_hiv_5text12":"АРТны бекем кармануу үчүн эмне кылыш керек?",
+  "presence_of_hiv_5text13":"Дары ичүүнү күнүмдүк иштерге байлап койсоңуз болот (мисалы, тишиңизди тазалагандан кийин ичиңиз). ",
+  "presence_of_hiv_5text14":"Эстеткичтерди (мобилдик телефондогу таймерлерди) колдонсоңуз болот.",
+  "presence_of_hiv_5text15":"Дарыгердин сунуштарын жазып, аларды кынтыксыз аткарыңыз",
+  "presence_of_hiv_5text16":"Дарысыз калбаш үчүн алар түгөнгө чейин дем алыш жана майрам күндөрүн эске алып, дарыгерге барчу күндөрдүн календарын түзүп алыңыз.",
+  "presence_of_hiv_5text17":"Дары үчүн контейнерлерди же дары сактай турган органайзерлерди колдонуңуз",
+  "presence_of_hiv_5text18":"Моралдык колдоо жана практикалык жардам көрсөтө алган, ВИЧке чалдыккан адамдар менен байланышты үзбөңүз.",
+  "presence_of_hiv_5text19":"Дарыланып жаткан маалда шерик табыңыз – бул адам дарылоонун баштапкы этабында жардам берип турат (тууган, дос же медайым).",
+  "presence_of_hiv_5text20":"Баңгизат колдонгон ВИЧ-позитивдүү адамдар метадон менен алмаштыруучу терапия программаларына кошула алышат.",
+
+  "presence_of_hiv_6text1":"ВИЧ-инфекциясын ДАРЫЛОО",
+  "presence_of_hiv_6text2":"ВИЧ-инфекциясын дарылоо ",
+  "presence_of_hiv_6text3":"",
+  "presence_of_hiv_6text4":"антиретровирустук терапия (кыскача – АРТ) ",
+  "presence_of_hiv_6text45":"деп аталат.\n",
+  "presence_of_hiv_6text5":"АРТ бул ретровируска, башкача айтканда, ВИЧ-инфекциясын чакырган вируска каршы иштеген дарылоо.",
+  "presence_of_hiv_6text6":"АРТ вирустун көбөйүшүн токтотот ",
+  "presence_of_hiv_6text7":"ВИЧ-инфекциясын дарылоодо ",
+  "presence_of_hiv_6text8":"антиретровирустук дарылар (АРВД) ",
+  "presence_of_hiv_6text9":"колдонулат.Бул дарылар вирустун көбөйүшүн токтотушат. Дарылоо башталгандан 3-6 ай өткөндөн кийин вирус кан анализинде аныкталбаган өтө төмөн деңгээлге чейин азаят – бул аныкталбаган вирустук жүк деп аталат.",
+  "presence_of_hiv_6text10":"Сүрөт. Вирустук жүк – дарылоого чейинки жана андан кийинки кандагы вирустун саны ",
+  "presence_of_hiv_6text11":"\nВИЧти дарылабаса вирус организмдин иммундук (коргонуу) системасынын клеткаларын (аларды СД4 клеткалары деп коюшат) жок кылат.Ошондуктан, СД4 клеткаларынын саны азайып, кандагы вирустун саны тез көбөйөт. Дарыланбаса, абдан көп клетка жок болуп, иммундук система  организмди коргой албай калат жана адам башка жугуштуу оорулардан же рактан көз жумат.\n",
+  "presence_of_hiv_6text12":"\nАРТны ичкенде иммундук система калыбына келип, СД4 клеткаларынын саны көбөйөт.ВИЧ-инфекциянын белгилери жок болот же азая баштайт (эгерде мындай белгилер мурда болгон болсо).nЖыныстык өнөктөшкө   же төрөлө элек балага ВИЧ-инфекциясын жуктуруп алуу тобокелдиги да бир топ азаят.\n",
+  "presence_of_hiv_6text13":"\nВИЧ-инфекциясын дарылоо адамдын ден соолугун жана өмүрүн сактап кала алат.",
+  "presence_of_hiv_6text14":" Дарылоону мүмкүн болушунча эрте баштоо керек ",
+  "presence_of_hiv_6text15":"– ВИЧ-статусу аныкталгандан кийин кечиктирбестен баштап, дарыгердин көрсөтмөсүн так аткаруу зарыл. ",
+  "presence_of_hiv_6text16":" \nАРТны канчалык эрте баштасаңыз, вирус иммундук системага ошончолук азыраак зыян келтирет.",
+  "presence_of_hiv_6text17":"Бул абдан маанилүү, анткени иммунитет өтө жай калыбына келет.",
+  "presence_of_hiv_6text18":"АРТны ичкендин натыйжасында вирус көбөйбөй калганы менен, организм кайсы бир убакытка коргоосуз калат.\nАзырынча, адамды ВИЧ-инфекциясынан толугу менен айыктыра алган дары жок жана вирустан коргой турган вакцина ойлонуп табыла элек.Ошондуктан ВИЧке чалдыккан адам өмүрүн аягына чейин үзгүлтүксүз дарыланып турушу керек.\n",
+  "presence_of_hiv_6text19":"\nДары-дармектерди кабыл алуунун дозасын жана убактысын бекем сакташ керек, дарылоону эч качан үзгүлтүккө учуратпоо маанилүү – бул ",
+  "presence_of_hiv_6text20":" дарылоону кармануу ",
+  "presence_of_hiv_6text21":"деп аталат. ВИЧ менен жашаган адамдардын жанында ар дайым бери дегенде 1 айга жете турган дарылардын запасы болушу керек, дарылоону үзгүлтүккө учуратпаш үчүн дарыларды улам толуктап туруу зарыл. АРТны кабыл алуу боюнча дарыгердин көрсөтмөлөрүн бузсаңыз, ",
+  "presence_of_hiv_6text22":"анда дарылар ВИЧке таасирин тийгизе албай калат. ",
+  "presence_of_hiv_6text23":"Мындай учурда дарыгер башка дарыларды дайындайт, ал эми дарылардын саны көбөйөт. \n",
+  "presence_of_hiv_6text24":"\nВИЧ-инфекциясын дарылоо үчүн дарылар (АРВД) акысыз берилет! \n",
+  "presence_of_hiv_6text25":"\nВИЧ-инфекциясын дарылоо адамдын ден соолугун жана өмүрүн сактап калат!"
 
 
 }
