--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -1045,7 +1045,97 @@
   "c8_7text1":"Раскрытие ВИЧ-статуса ребенку",
   "c8_7text2":"\n\nНе нужно слишком рано говорить детям о ВИЧ статусе, поскольку дети могут рассказать об этом другим людям, что может привести к нежелательным последствиям, как для детей, так и семей, живущих с ВИЧ. Но можно говорить о правильном отношении к своему здоровью с раннего возраста.",
   "c8_7text3":"\n\nРаскрытие статуса рекомендуется детям в 10-12 лет. Лучше всего, если открытие ВИЧ статуса подросткам будут делать родители. Если же вам удастся наладить контакт с детьми с самого детства, то вы сможете рассказать ребенку о ВИЧ, о причинах его заражения, а также о жизни с ВИЧ. ",
-  "c8_7text4":"\n\nПомощь в раскрытии ВИЧ-статуса ребенку оказывают врачи центров СПИД, психологи, некоторые обученные педагоги и представители НПО. После раскрытия статуса дети нуждаются в психологической поддержке для принятия своего статуса и формирования приверженности к лечению. В этих вопросах помощь могут оказать молодые лидеры из числа ЛЖВ.  "
+  "c8_7text4":"\n\nПомощь в раскрытии ВИЧ-статуса ребенку оказывают врачи центров СПИД, психологи, некоторые обученные педагоги и представители НПО. После раскрытия статуса дети нуждаются в психологической поддержке для принятия своего статуса и формирования приверженности к лечению. В этих вопросах помощь могут оказать молодые лидеры из числа ЛЖВ.  ",
+
+
+  "presence_of_hiv_1text1": "Что делать, если у Вас выявили ВИЧ\n\n",
+  "presence_of_hiv_1text2": "Сегодня ВИЧ-инфекция, это хроническое инфекционное заболевание,при получении лечения которого человек может сохранить здоровье и прожить долгую жизнь, как и человек без ВИЧ.",
+  "presence_of_hiv_1text3": "Следует успокоиться и получить больше информации о ВИЧ-инфекции, которую Вы найдете в этом приложении в разделе «Школа пациента». Вы можете получить эту же информацию у врача или сотрудников НПО.",
+  "presence_of_hiv_1text4": "Врач может подсказать Вам адреса НПО или групп поддержки людей, которые живут с ВИЧ (их называют ЛЖВ). Они могут дать Вам информацию о ВИЧ и оказать помощь на этапе принятия статуса и начала лечения.",
+  "presence_of_hiv_1text5": "Вам нужно сообщить о своем статусе своим половым партнерам и принять меры, чтобы не передать им ВИЧ.",
+  "presence_of_hiv_1text6": "Нужно определить людей, которым Вы доверяете, чтобы поделиться с ними информацией и получить поддержку.",
+  "presence_of_hiv_1text7": "Вы можете еще не чувствовать какие-то проявления ВИЧ-инфекции, но ВИЧ находится в организме и медленно уничтожает клетки иммунной (защитной) системы. Поэтому нужно как можно скорее начать защищаться себя от ВИЧ.",
+  "presence_of_hiv_1text8": "Встаньте на учет в Центре СПИД или другой медицинской организации (ЦСМ, ГСВ); пройдите необходимое обследование и начните лечение ВИЧ-инфекции. Чем раньше Вы начнете лечение, тем меньший вред ВИЧ окажет на Ваше здоровье.",
+  "presence_of_hiv_1text9": "При раннем начале и правильно проводимом лечении (строгое соблюдение дозы препарата, непрерывности  лечения) антиретровирусными препаратами у ВИЧ-позитивных людей иммунная система не разрушается, поэтому СПИД не развивается, не присоединятся также и оппортунистические инфекции.",
+  "presence_of_hiv_1text10": "Получите информацию какие меры профилактики для собственной защиты и защиты близких нужно использовать.",
+  "presence_of_hiv_1text11": "При необходимости Вы можете включиться в профилактические программы для того, чтобы защитить себя от инфекций, которые передаются половым или инъекционным путем. Это особенно важно, если Вы потребляете наркотики, имеете случайные половые контакты или вступаете в контакты с людьми одного с Вами пола.",
+
+  "presence_of_hiv_2text1":"Антиретровирусные препараты",
+  "presence_of_hiv_2text2":"Антиретровирусные препараты (АРВП)",
+  "presence_of_hiv_2text3":" – это лекарства, которые действуют против ретровируса – то есть вируса, который вызывает ВИЧ-инфекцию.\n",
+  "presence_of_hiv_2text4":"\nВ настоящее время существует много эффективных препаратов для лечения ВИЧ-инфекции. Важно получать одновременно несколько препаратов, которые действуют на разные этапы развития вируса. Современные лекарства включают три разных препарата в одной таблетке.\n",
+  "presence_of_hiv_2text5":"\nДо настоящего времени не разработано лекарство, которое могло бы полностью излечить человека от ВИЧ-инфекции, и нет вакцины, которая могла бы защитить от заражения ВИЧ. Поэтому человек с ВИЧ должен постоянно получать лечение.\n",
+  "presence_of_hiv_2text6":"\nКак действуют антиретровирусные препараты?",
+  "presence_of_hiv_2text7":"\n\nАнтиретровирусные препараты не излечивают от ВИЧ-инфекции, а лишь подавляют размножение вируса. В результате применения АРТ, содержание ВИЧ в организме уменьшается в тысячи и миллионы раз, ВИЧ перестает размножаться и не разрушает иммунные клетки. С этого времени иммунная система начинает восстанавливаться.\n",
+  "presence_of_hiv_2text8":"\nВ настоящее время в мире применяется более 20 антиретровирусных препаратов. Каждый препарат действует на один из этапов размножения вируса. Поэтому врачи подбирают схему лечения, которая включает несколько препаратов. АРВП, дополняя друг друга, обеспечивают защиту организма от ВИЧ.\n",
+  "presence_of_hiv_2text9":"Схема АРТ всегда содержит три разных АРВ-препарата.",
+  "presence_of_hiv_2text10":"Схему лечения определяет врач, с учетом особенностей здоровья и результатов лабораторного исследования.",
+  "presence_of_hiv_2text11":"В одной таблетке может содержаться 1, 2, или 3 препарата.",
+  "presence_of_hiv_2text12":"Ежедневно принимают от одной до трех (иногда до шести) таблеток. Это зависит от состояния иммунитета и устойчивости вируса к препаратам.",
+  "presence_of_hiv_2text13":"Для того, чтобы контролировать лечение, нужно регулярно сдавать кровь на вирусную нагрузку – то есть узнавать о количестве вируса в крови.\n",
+  "presence_of_hiv_2text14":"\nКогда АРТ перестает работать (не снижается вирусная нагрузка)?\n",
+  "presence_of_hiv_2text15":"Чаще всего это связано с низкой приверженностью к лечению - когда ЛЖВ по разным причинам пропускают прием препаратов.",
+  "presence_of_hiv_2text16":"Иногда сам ВИЧ приспосабливается и становится невосприимчивым (устойчивым) к действию лекарств.",
+  "presence_of_hiv_2text17":"\nТакие случаи нужно обсудить с врачом и совместно решать проблему.\n",
+  "presence_of_hiv_2text18":"\nНазначение АРВП проводится в строгом соответствии с инструкциями, которые утверждаются Министерством здравоохранения (они называются Клинические протоколы).\n",
+  "presence_of_hiv_2text19":"\nВ мире ведется постоянная работа по созданию новых более эффективных лекарств для лечения ВИЧ-инфекции.\n",
+
+  "presence_of_hiv_3text1":"Воздействие АРТ на здоровье человека",
+  "presence_of_hiv_3text2":"Несмотря на то, что ВИЧ может долго не проявляет себя в организме человека, он медленно уничтожает иммунные клетки, которые защищают организм от болезней. Назначение АРТ позволит сохранить иммунную систему и, таким образом, защитит организм от болезней.",
+  "presence_of_hiv_3text3":"В случае нарушения иммунитета, организм человека с ВИЧ подвергается риску сопутствующих заболеваний – они называются оппортунистические инфекции и не развиваются у людей с сильной иммунной системой. Каждое такое заболевание само по себе создает серьезную (а иногда и смертельную) опасность для человека. Чаще всего при ВИЧ-инфекции присоединяется туберкуле. Для человека с ВИЧ – это дополнительная угроза снижения иммунитета. Помимо этого, наряду с АРТ возникнет необходимость приема других препаратов, что усилит риск нежелательных эффектов от лечения. Т.е. вместо 2-3 препаратов в день придется принимать 8-10 препаратов в зависимости от формы туберкулеза.",
+  "presence_of_hiv_3text4":"Риск возникновения и тяжесть течения любых заболеваний у человека с ВИЧ значительно опаснее, чем у людей без ВИЧ-инфекции.",
+  "presence_of_hiv_3text5":"Назначение АРТ ВИЧ-позитивным беременным женщинам позволяет предотвратить передачу ВИЧ ее ребенку.",
+  "presence_of_hiv_3text6":"Важно назначать лечение детям, живущим с ВИЧ, чтобы они испытали все радости жизни и общения со сверстниками без боли, без болезней, с хорошим физическим развитием и сильной иммунной системой.",
+  "presence_of_hiv_3text7":"Наука не стоит на месте. Проводится работа по разработке новых лекарств для лечения ВИЧ-инфекции. Возможно, такие лекарства будут найдены и Вам удастся полностью освободиться от ВИЧ.",
+  "presence_of_hiv_3text8":"Человек рожден, чтобы жить. Для этого люди переносят тяжелые операции, соглашаются на ампутацию ног, рук, груди, платят огромные деньги за пересадку сердца и почек, а затем пожизненно принимают специальные препараты; бывает, что жертвуют своими органами (почкой) для своих близких. Поэтому прием одной-трех таблеток в день – это минимальная плата за долгую и здоровую жизнь…",
+
+  "presence_of_hiv_5text1":"ПРИВЕРЖЕННОСТЬ к АНТИРЕТРОВИРУСНОЙ ТЕРАПИИ",
+  "presence_of_hiv_5text2":"Приверженность к АРТ означает прием антиретровирусных препаратов пациентом с точным соблюдением графика приема и дозировки, которые были рекомендованы врачом. Высокая приверженность АРТ – важнейшее условие успеха лечения.\n",
+  "presence_of_hiv_5text3":"Для эффективного подавления размножения ВИЧ (то есть до достижения неопределяемой вирусной нагрузки) необходимо принимать ",
+  "presence_of_hiv_5text4":"95 –100 % предписанных доз препаратов.\n",
+  "presence_of_hiv_5text5":"\nЛюди иногда допускают ошибки в приеме препаратов по невнимательности, забывчивости либо неверия в эффективность лечения. Поэтому важно получить правдивую информацию об АРТ и получить поддержку. Большую помощь Вам могут оказать люди, которые живут с ВИЧ, и могут открыто говорить о своем статусе. Можно также принять участие в группах поддержки (группы само и взаимопомощи) из числа ЛЖВ. Они помогут справиться со стрессом, связанным с принятием ВИЧ-статуса; помогут на начальном этапе лечения по ВИЧ-инфекции, напомнят о приеме препаратов; окажут другую помощь.\n",
+  "presence_of_hiv_5text6":"\nПочему важно принимать препараты точно по времени?\n",
+  "presence_of_hiv_5text7":"Для каждого препарата рассчитана такая дозировка и такая частота приёма, чтобы в крови постоянно поддерживалось определённое количество лекарства. Только в этом случае ВИЧ не размножается, и не формируются его изменения (мутации), которые могут стать причиной устойчивости к антиретровирусным препаратам – и лечение перестанет действовать на вирус.",
+  "presence_of_hiv_5text8":"При пропуске препарата количество лекарства в крови снижается, и ВИЧ начинает размножаться. При этом могут образоваться вирусы-мутанты, которые обладают устойчивостью к препаратам. В результате лечение перестает действовать, а вирус начинает размножаться. В результате назначаются другие схемы лечения, и может увеличиться количество принимаемых таблеток.",
+  "presence_of_hiv_5text9":"Чем чаще повторяются пропуски, тем больше риск, что вирус приспособится и станет устойчивым к антиретровирусным препаратам.",
+  "presence_of_hiv_5text10":"Можно отклонятся на один час от предписанного времени приема лекарств в ту или иную сторону, но лучше всего ориентироваться на прием лекарств в одно и то же время – для этого можно использовать оповещение на мобильном телефоне, увязать прием препаратов с обычным ежедневным действием (умыванием, завтраком, ежедневным выходом на работу) либо попросить помощи друзей или родственников.",
+  "presence_of_hiv_5text11":"При пропуске приема очередной дозы препарата её можно принять только в том случае, если до времени следующего приема осталось более 6 часов (для лекарств, которые принимают два раза в день, например, Комбивир) или более 12 часов (для лекарств, которые принимают один раз в день, например, Атрипла).",
+  "presence_of_hiv_5text12":"Как повысить приверженность",
+  "presence_of_hiv_5text13":"Привязать прием препаратов к повседневным делам (например, к чистке зубов).",
+  "presence_of_hiv_5text14":"Напоминающие приспособления (таймеры сотовых телефонов).",
+  "presence_of_hiv_5text15":"Записать рекомендации врача и следовать им.",
+  "presence_of_hiv_5text16":"Составить календарь посещения врача с учетом возможных выходных и праздничных дней, чтобы получать препараты заранее до их полного использования.",
+  "presence_of_hiv_5text17":"Составить календарь посещения врача с учетом возможных выходных и праздничных дней, чтобы получать препараты заранее до их полного использования.",
+  "presence_of_hiv_5text18":"Общение с ЛЖВ, которые могут оказать моральную поддержку и практическую помощь.",
+  "presence_of_hiv_5text19":"Найти компаньона по лечению – человека, который поможет на этапе начала АРТ (родственник, друг или медсестра).",
+  "presence_of_hiv_5text20":"Включение в программы заместительной терапии метадоном для ЛЖВ, которые принимают наркотики.",
+
+  "presence_of_hiv_6text1":"ЛЕЧЕНИЕ ВИЧ-инфекции",
+  "presence_of_hiv_6text2":"ЛЕЧЕНИЕ ВИЧ-инфекции ",
+  "presence_of_hiv_6text3":"называется ",
+  "presence_of_hiv_6text4":"антиретровирусная терапия (сокращенно - АРТ).",
+  "presence_of_hiv_6text45":"\n",
+  "presence_of_hiv_6text5":"АРТ - это лечение, которое действует против ретровируса – то есть вируса, который вызывает ВИЧ-инфекцию.",
+  "presence_of_hiv_6text6":"АРТ останавливает рамножение вируса",
+  "presence_of_hiv_6text7":"Лекарства для лечения ВИЧ-инфекции называют ",
+  "presence_of_hiv_6text8":"антиретровирусные препараты (АРВП). ",
+  "presence_of_hiv_6text9":"Они останавливают размножение вируса.  Через 3-6 месяцев после начала лечения количество вируса снижается до очень низкого уровня, которое не определяется при исследовании крови – это называется неопределяемая вирусная нагрузка.",
+  "presence_of_hiv_6text10":"Рис. Вирусная нагрузка – количество вируса в крови до и после лечения",
+  "presence_of_hiv_6text11":"\nБез лечения ВИЧ поражает клетки иммунной (защитной) системы организма (их называют CD4-клетки). Поэтому количество СД4 уменьшается, а количество вируса в крови быстро увеличивается. При отсутствии лечения разрушается так много клеток, что иммунная система не может защищать организм, и человек погибает от других инфекционных заболеваний или от рака.\\n",
+  "presence_of_hiv_6text12":"\nПри приеме АРТ иммунная система восстанавливается, увеличивается количество CD4-клеток. Исчезают, или уменьшаются проявления ВИЧ-инфекции (если они были ранее).\nРиск заражения ВИЧ полового партнера или будущего ребенка значительно снижается.\n",
+  "presence_of_hiv_6text13":"\nЛечение ВИЧ-инфекции позволяет сохранить здоровье и жизнь человека.\n",
+  "presence_of_hiv_6text14":"Лечение нужно начинать как можно раньше",
+  "presence_of_hiv_6text15":" – сразу же после установления ВИЧ-статуса и строго соблюдать назначения врача.",
+  "presence_of_hiv_6text16":"\nЧем раньше начато лечение, тем меньше вреда вирус нанесет иммунной системе. ",
+  "presence_of_hiv_6text17":"Это очень важно, потому что восстановление иммунной системы происходит очень медленно и организм остается без защиты даже если вирус уже не размножается в результате приема АРТ.\n",
+  "presence_of_hiv_6text18":"\nДо настоящего времени не разработано лекарство, которое могло бы полностью излечить человека от ВИЧ-инфекции, и нет вакцины, которая могла бы защитить от заражения ВИЧ. Поэтому человек с ВИЧ должен постоянно получать лечение.\n",
+  "presence_of_hiv_6text19":"\\nВажно строго соблюдать дозу и время приема лекарств, никогда не прерывать лечение",
+  "presence_of_hiv_6text20":" – это называется приверженность к лечению. ",
+  "presence_of_hiv_6text21":"У ЛЖВ всегда должен быть запас препаратов, не меньше, чем на 1 месяц, который нужно регулярно пополнять, чтобы не было перерывов в лечении. Даже небольшие перерывы в лечении могут привести к ",
+  "presence_of_hiv_6text22":"устойчивости вируса",
+  "presence_of_hiv_6text23":"– тогда лекарства не будут действовать на ВИЧ. В таком случае назначаются другие лекарства, а количество применяемых таблеток увеличивается. \n",
+  "presence_of_hiv_6text24":"\nПрепараты для лечения ВИЧ-инфекции (АРВП) предоставляются бесплатно! \n",
+  "presence_of_hiv_6text25":"\nАнтиретровирусная терапия позволяет людям с ВИЧ прожить полноценную и долгую жизнь!"
 
 }
 
